dia3/app1-lento/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-lento-service
spec:
  selector:
    app: app1-lento
  ports:
    - protocol: TCP
      port: 8080 # A porta do service
      targetPort: http # A porta do container (referenciada pelo nome)
